# chiefvoice-app

./: .gitignore  Caddyfile  EXAMPLES.md  README.md  capacitor.config.ts  ecosystem.config.js  electron-builder.yml  mise.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  server.js
backend/: README.md  chief_bot.py  requirements.txt  start.sh
deploy/systemd/: chiefvoice-app.service
docs/: RECENT-FIXES.md
electron/: entitlements.mac.plist  main.js  preload.js
ios/App/App/: AppDelegate.swift  Info.plist  ThemePlugin.swift
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
scripts/: doctor.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  wake_word.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/history/: page.tsx
src/app/login/: page.tsx
src/app/settings/: page.tsx
src/components/: ActivityIndicator.tsx  Avatar.tsx  CallControls.tsx  CallStatus.tsx  Cards.tsx  ConnectScreen.tsx  HistoryDrawer.tsx  InlineTranscript.tsx  InputToggle.tsx  MessageBubble.tsx  ModeSelector.tsx  ResponseFormatToggle.tsx  RichText.tsx  SettingsModal.tsx  StatusIndicator.tsx  TextInput.tsx  ThemeProvider.tsx  Transcript.tsx  VoiceOrb.tsx  VoiceSubtitle.tsx  WakeWordListener.tsx
src/components/Desktop/: DesktopLayout.tsx  Sidebar.tsx  index.ts
src/components/ui/: button.tsx  input.tsx
src/hooks/: useTauri.ts
src/lib/: activity-stream.ts  api.ts  integrations.ts  modes.ts  native.ts  platform.ts  tauri.ts
src/lib/actions/: executor.ts  index.ts  (+4 more)
(+39 files in other folders)
