[package]
name = "chief-desktop"
version = "0.1.0"
description = "Chief Desktop - Voice Assistant with Wake Word Detection"
authors = ["David Jones"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
# tauri-plugin-autostart = "2"  # Disabled for now
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (for future wake word)
# cpal = "0.15"

# Wake word detection - temporarily disabled due to dependency conflicts
# Will use macOS native Speech Recognition API instead
# rustpotter = { version = "3.0.2", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
